Updated site url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         content="Explore my portfolio showcasing expertise in ReactJS, Next.js, and full-stack development. 7+ years of experience in delivering scalable and robust web solutions.">
     <meta property="og:image" content="assets/img/prefil.jpg">
     <!-- Replace with an actual preview image -->
-    <meta property="og:url" content="https://your-portfolio-site.com"> <!-- Replace with your actual URL -->
+    <meta property="og:url" content="https://skmohit05.github.io/my-portfolio/"> <!-- Replace with your actual URL -->
     <meta property="og:type" content="website">
 
     <!-- Twitter Meta Tags -->
