added portfolios, services and updated styles

--- a/index.html
+++ b/index.html
@@ -138,14 +138,18 @@
                     </div>
 
                     <div class="home__data">
-                        <h1 class="home__title">Hi, I'm Mohit</h1>
-                        <h3 class="home__subtitle">Senior Full Stack Web Developer</h3>
-                        <p class="home__description">With over 7 years of experience in full-stack development, I
-                            specialize in delivering high-quality web solutions, using technologies like React, Node.js,
-                            Python, and Java, ensuring seamless user experiences and robust backend solutions.</p>
-                        <a href="#contact" class="button button--flex">
-                            Contact Me <i class="uil uil-message button__icon"></i>
-                        </a>
+                        <div class="text-center">
+                            <h1 class="home__title">Hi, I'm Mohit</h1>
+                            <h3 class="home__subtitle">Senior Full Stack Web Developer</h3>
+                            <p class="home__description">With over 7 years of experience in full-stack development, I
+                                specialize in delivering high-quality web solutions, using technologies like React,
+                                NextJS,
+                                Node.js,
+                                Python, and Java, ensuring seamless user experiences and robust backend solutions.</p>
+                            <a href="#contact" class="button button--flex">
+                                Contact Me <i class="uil uil-message button__icon"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
@@ -305,12 +309,12 @@
             <div class="services__container container grid">
                 <!--==================== SERVICES 1: Frontend Developer ====================-->
                 <div class="services__content">
-                    <div>
+                    <div class="text-center">
                         <i class="uil uil-arrow services__icon"></i>
                         <h3 class="services__title">Frontend <br> Developer</h3>
                     </div>
 
-                    <span class="button button--flex button--small button--link services__button">
+                    <span class="button button--flex button--small button--link services__button text-center-row">
                         View More
                         <i class="uil uil-arrow-right button__icon"></i>
                     </span>
@@ -341,12 +345,12 @@
 
                 <!--==================== SERVICES 2: Backend Developer ====================-->
                 <div class="services__content">
-                    <div>
+                    <div class="text-center">
                         <i class="uil uil-pen services__icon"></i>
                         <h3 class="services__title">Backend <br> Developer</h3>
                     </div>
 
-                    <span class="button button--flex button--small button--link services__button">
+                    <span class="button button--flex button--small button--link services__button text-center-row">
                         View More
                         <i class="uil uil-arrow-right button__icon"></i>
                     </span>
@@ -374,41 +378,42 @@
                     </div>
                 </div>
 
-                <!--==================== SERVICES 3: UI/UX Designer ====================-->
+                <!--==================== SERVICES 3: AI Automation ====================-->
                 <div class="services__content">
-                    <div>
-                        <i class="uil uil-web-grid services__icon"></i>
-                        <h3 class="services__title">UI/UX <br> Designer</h3>
+                    <div class="text-center">
+                        <i class="uil uil-robot services__icon"></i>
+                        <h3 class="services__title">AI <br> Automation</h3>
                     </div>
 
-                    <span class="button button--flex button--small button--link services__button">
+                    <span class="button button--flex button--small button--link services__button text-center-row">
                         View More
                         <i class="uil uil-arrow-right button__icon"></i>
                     </span>
 
                     <div class="services__modal">
                         <div class="services__modal-content">
-                            <h4 class="services__modal-title">UI/UX <br> Designer</h4>
+                            <h4 class="services__modal-title">AI <br> Automation</h4>
                             <i class="uil uil-times services__modal-close"></i>
 
                             <ul class="services__modal-services grid">
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Crafting intuitive user interfaces with a focus on usability and user experience.
-                                    </p>
+                                    <p>Building AI-powered tools to automate tasks and enhance efficiency using OpenAI
+                                        and DALL-E.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Creating high-fidelity wireframes, prototypes, and interactive designs.</p>
+                                    <p>Implementing advanced search systems with FAISS for similarity-based queries.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>Brand positioning through design, ensuring consistency and visual appeal.</p>
+                                    <p>Exploring Make.com to automate workflows and streamline business processes.</p>
                                 </li>
                             </ul>
                         </div>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -419,13 +424,48 @@
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
-                    <!--==================== PORTFOLIO 1: Modern Website ====================-->
+                    <!--==================== PORTFOLIO 1: Nallai ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/nallai_home_without_login.png" alt="" class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Website</h3>
-                            <p class="portfolio__description">A responsive website adaptable to all devices with smooth
-                                UI components and animated interactions.</p>
+                            <h3 class="portfolio__title">Nallai</h3>
+                            <div class="text-center">
+                                <p class="portfolio__description">Visualizes high-dimensional data using self-organizing
+                                    maps.
+                                </p>
+                            </div>
+                            <a class="button button--flex button--small portfolio__button portfolios__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== PORTFOLIO 2: Encore ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/encore_employer_jobs.png" alt="" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Encore</h3>
+                            <div class="text-center">
+                                <p class="portfolio__description">Connects hospitals with doctors for temporary work
+                                    opportunities.</p>
+                            </div>
+                            <a class="button button--flex button--small portfolio__button portfolios__button">
+                                Demo
+                                <i class="uil uil-arrow-right button__icon"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!--==================== PORTFOLIO 3: Mindtap ====================-->
+                    <div class="portfolio__content grid swiper-slide">
+                        <img src="assets/img/mindtap-home.png" alt="" class="portfolio__img">
+                        <div class="portfolio__data">
+                            <h3 class="portfolio__title">Mindtap</h3>
+                            <div class="text-center">
+                                <p class="portfolio__description">Allows simple YES/NO responses and visualizes
+                                    analytics for insights.</p>
+                            </div>
                             <a href="" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -433,27 +473,16 @@
                         </div>
                     </div>
 
-                    <!--==================== PORTFOLIO 2: Brand Design ====================-->
+                    <!--==================== PORTFOLIO 4: Milan ====================-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                        <img src="assets/img/milan-home.png" alt="" class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Brand Design</h3>
-                            <p class="portfolio__description">A polished brand design incorporating the company’s
-                                identity and vision through visually engaging elements.</p>
-                            <a href="" class="button button--flex button--small portfolio__button">
-                                Demo
-                                <i class="uil uil-arrow-right button__icon"></i>
-                            </a>
-                        </div>
-                    </div>
-
-                    <!--==================== PORTFOLIO 3: Online Store ====================-->
-                    <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
-                        <div class="portfolio__data">
-                            <h3 class="portfolio__title">Online Store</h3>
-                            <p class="portfolio__description">A fully functional, responsive online store with
-                                easy-to-navigate UI and a secure checkout system.</p>
+                            <h3 class="portfolio__title">Milan Academy</h3>
+                            <div class="text-center">
+                                <p class="portfolio__description">A platform offering educational resources for JEE and
+                                    NEET
+                                    exam prep.</p>
+                            </div>
                             <a href="" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -471,6 +500,53 @@
 
                 <div class="swiper-pagination"></div>
             </div>
+
+
+            <div class="portfolios__modal">
+                <div class="portfolios__modal-content">
+                    <h4 class="portfolios__modal-title">AI <br> Automation</h4>
+                    <i class="uil uil-times portfolios__modal-close"></i>
+
+                    <ul class="portfolios__modal-services grid">
+                        <li class="portfolios__modal-service">
+                            <i class="uil uil-check-circle portfolios__modal-icon"></i>
+                            <p>Building AI-powered tools to automate tasks and enhance efficiency using OpenAI and
+                                DALL-E.</p>
+                        </li>
+                        <li class="portfolios__modal-service">
+                            <i class="uil uil-check-circle portfolios__modal-icon"></i>
+                            <p>Implementing advanced search systems with FAISS for similarity-based queries.</p>
+                        </li>
+                        <li class="portfolios__modal-service">
+                            <i class="uil uil-check-circle portfolios__modal-icon"></i>
+                            <p>Exploring Make.com to automate workflows and streamline business processes.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="portfolios__modal">
+                <div class="portfolios__modal-content">
+                    <h4 class="portfolios__modal-title">AI <br> Automation2</h4>
+                    <i class="uil uil-times portfolios__modal-close"></i>
+
+                    <ul class="portfolios__modal-services grid">
+                        <li class="portfolios__modal-service">
+                            <i class="uil uil-check-circle portfolios__modal-icon"></i>
+                            <p>Building AI-powered tools to automate tasks and enhance efficiency using OpenAI and
+                                DALL-E.</p>
+                        </li>
+                        <li class="portfolios__modal-service">
+                            <i class="uil uil-check-circle portfolios__modal-icon"></i>
+                            <p>Implementing advanced search systems with FAISS for similarity-based queries.</p>
+                        </li>
+                        <li class="portfolios__modal-service">
+                            <i class="uil uil-check-circle portfolios__modal-icon"></i>
+                            <p>Exploring Make.com to automate workflows and streamline business processes.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
 
@@ -480,7 +556,7 @@
                 <div class="project__container container grid">
                     <div class="project__data">
                         <h2 class="project__title">You have a new project</h2>
-                        <p class="project__description">Contact me now and let's discuss your new project.</p>
+                        <p class="project__description">Let's discuss it and get started!</p>
                         <a href="#contact" class="button button--flex button--white">
                             Contact Me
                             <i class="uil uil-message project__icon button__icon"></i>
