--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                             <i class="uil uil-instagram"></i>
                         </a>
 
-                        <a href="https://www.facebook.com/people/Mohit/100029173713627/" target="_blank" class="home__social-icon">
+                        <a href="https://www.facebook.com/people/Mohit/100029173713627/" target="_blank"
+                            class="home__social-icon">
                             <i class="uil uil-facebook"></i>
                         </a>
                     </div>
@@ -145,44 +146,44 @@
                     </div>
                 </div>
             </div>
-        </section>
 
-        <!--==================== ABOUT ====================-->
-        <section class="about section" id="about">
-            <h2 class="section__title">About Me</h2>
-            <span class="section__subtitle">My introduction</span>
+            <!--==================== ABOUT ====================-->
+            <section class="about section">
+                <h2 class="section__title">About Me</h2>
+                <span class="section__subtitle">My introduction</span>
 
-            <div class="about__container container grid">
-                <div class="about__data">
-                    <p class="about__description">With over 7 years of experience in full-stack development, I
-                        specialize in delivering high-quality web solutions, using technologies like React,
-                        NextJS, Node.js, Python, and Java, ensuring seamless user experiences and robust backend
-                        solutions.
-                        I am passionate about technology and continuously evolving to tackle new challenges.</p>
-                    <div class="about__info">
-                        <div>
-                            <span class="about__info-title">07+</span>
-                            <span class="about__info-name">Years experience</span>
-                        </div>
+                <div class="about__container container grid">
+                    <div class="about__data">
+                        <p class="about__description">With over 7 years of experience in full-stack development, I
+                            specialize in delivering high-quality web solutions, using technologies like React,
+                            NextJS, Node.js, Python, and Java, ensuring seamless user experiences and robust backend
+                            solutions.
+                            I am passionate about technology and continuously evolving to tackle new challenges.</p>
+                        <div class="about__info">
+                            <div>
+                                <span class="about__info-title">07+</span>
+                                <span class="about__info-name">Years experience</span>
+                            </div>
 
-                        <!-- <div>
+                            <!-- <div>
                             <span class="about__info-title">06</span>
                             <span class="about__info-name">Completed projects</span>
                         </div> -->
 
-                        <div>
-                            <span class="about__info-title">05</span>
-                            <span class="about__info-name">Client projects</span>
-                        </div>
+                            <div>
+                                <span class="about__info-title">05</span>
+                                <span class="about__info-name">Client projects</span>
+                            </div>
 
-                        <div class="about__buttons">
-                            <a href="assets/pdf/Mohit.pdf" target="_blank" class="button button--flex">
-                                Download CV<i class="uil uil-download-alt button__icon"></i>
-                            </a>
+                            <div class="about__buttons">
+                                <a href="assets/pdf/Mohit.pdf" target="_blank" class="button button--flex">
+                                    Download CV<i class="uil uil-download-alt button__icon"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </section>
 
         <!--==================== SERVICES ====================-->
@@ -309,7 +310,8 @@
                             </li>
                             <li class="services__modal-service">
                                 <i class="uil uil-check-circle services__modal-icon"></i>
-                                <p>Exploring Make.com and n8n to automate workflows and streamline business processes.</p>
+                                <p>Exploring Make.com and n8n to automate workflows and streamline business processes.
+                                </p>
                             </li>
                         </ul>
 
@@ -791,8 +793,8 @@
                                 <h5 class="portfolios__modal-service-title"><i
                                         class="uil uil-check-circle portfolios__modal-icon"></i>User Management and
                                     Profile Creation</h5>
-                                    <p>Students can create and manage their profiles with essential details, while
-                                        admins and teachers can oversee and update student and teacher information.</p>
+                                <p>Students can create and manage their profiles with essential details, while
+                                    admins and teachers can oversee and update student and teacher information.</p>
                             </li>
                             <li class="portfolios__modal-service">
                                 <h5 class="portfolios__modal-service-title"><i
@@ -1040,11 +1042,11 @@
                     </ul>
 
                     <div class="footer__socials">
-                        <a href="https://github.com/skmohit05" target="_blank"
-                            class="footer__social">
+                        <a href="https://github.com/skmohit05" target="_blank" class="footer__social">
                             <i class="uil uil-github"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/mohit-kumar-5bb203a1/" target="_blank" class="footer__social">
+                        <a href="https://www.linkedin.com/in/mohit-kumar-5bb203a1/" target="_blank"
+                            class="footer__social">
                             <i class="uil uil-linkedin-alt"></i>
                         </a>
                         <a href="https://www.youtube.com/@mohit6925" target="_blank" class="footer__social">
@@ -1053,7 +1055,8 @@
                         <a href="https://www.instagram.com/_mohit.kumar_28/#" target="_blank" class="footer__social">
                             <i class="uil uil-instagram"></i>
                         </a>
-                        <a href="https://www.facebook.com/people/Mohit/100029173713627/" target="_blank" class="footer__social">
+                        <a href="https://www.facebook.com/people/Mohit/100029173713627/" target="_blank"
+                            class="footer__social">
                             <i class="uil uil-facebook"></i>
                         </a>
                     </div>
